syntax = "proto3";

package com.ubt.improtolib.proto;
import "google/protobuf/any.proto";
option java_package="com.ubtrobot.channelservice.proto";
option java_outer_classname="ChannelMessageContainer";

//消息格式
message ChannelMessage {
    Header header=1;
    google.protobuf.Any payload = 2;
}

//消息头
message Header {
    string action=1;
    int64 time=2;
}
